--- a/css/styles.css
+++ b/css/styles.css
@@ -760,18 +760,31 @@ img {
 
 .modal {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 528px;
-  height: 580px;
-  background-color: white;
-  transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    padding-top: 72px;
+    padding-right: 24px;
+    padding-left: 24px;
+    padding-bottom: 24px;
+    border-radius: 4px;
+    background-color: #FCFCFD;
+    box-shadow: 0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%), 0px 2px 1px rgb(0 0 0 / 20%);
+    transition: transform 250ms var(--timing-function);
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
 }
 
 .modal-close-btn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 24px;
+  right: 24px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -779,6 +792,7 @@ img {
   width: 24px;
   height: 24px;
   padding: 0;
+  cursor: pointer;
   border: 1px solid rgba(0, 0, 0, 0.1);
 
   border-radius: 24px;
@@ -804,4 +818,173 @@ img {
 .modal-close-btn:hover .modal-close-icon,
 .modal-close-btn:focus .modal-close-icon {
   fill: var(--white-color)
+}
+
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-field {
+display:block;
+margin-bottom: 16px;
+font-size: 12px;
+line-height: calc(12 / 10);
+}
+
+.modal-form-field-desc {
+  display: block;
+  font-size: 12px;
+  user-select: none;
+  line-height: 1.33;
+  ;
+  color: var(--customers-color);
+}
+
+.modal-form-field-wrapper{
+  position: relative;
+  display: block;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #8E8F99 ;
+  border-radius: 4px;
+  padding-left: 42px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  display: block;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-field-massage {
+  width: 100%;
+  height: 100px;
+  padding: 10px 16px;
+  resize: none;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus + .modal-form-input-icon{
+  fill: var(--customers-color-active);
+}
+
+.modal-form-input:focus {
+  border-color: var(--customers-color-active);
+}
+
+.modal-form-field-massage:focus {
+  border-color: var(--customers-color-active);
+  border-radius: 2px;
+} 
+
+.modal-form-check-desc {
+  display: inline-flex;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  color: #757575;
+  margin-bottom: 20px;
+}
+
+.link-policy {
+  color: #4d5ae5;
+}
+
+.checkbox-topic input[type='checkbox'] {
+  appearance: none;
+  -webkit-appearence: none;
+  -moz-appearence: none;
+}
+
+.checkbox-icon {
+  background-image: url(/images/checkbox/Default.png);
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  margin-right: 8px;
+}
+
+.modal-form-check:checked+ .checkbox-icon {
+  background-image: url(/images/checkbox/click.png);
+}
+
+.modal-form-btn {
+  color: #E7E9FC;
+  padding: 16px 32px;
+  gap: 10px;
+  border: none;
+
+  width: 169px;
+  height: 56px;
+  left: 831px;
+  top: 616px;
+
+  background: var(--primary-brand-color);
+  border-radius: 4px;
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.modal-form-btn:hover,
+.modal-form-btn:focus {
+  background-color: var(--pressed-state);
+}
+
+.subscribe {
+  margin-left: 80px;
+}
+
+.subscribe-title {
+  margin-bottom: 24px;
+  font-weight: 500;
+  color: var(--white-color);
+}
+
+.form-subscribe {
+  gap: 24px;
+  display: flex;
+}
+
+.subscribe-input {
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: var(--white-color);
+}
+
+.btn-subscribe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: inherit;
+  padding: 8px 24px;
+  gap: 16px;
+  color: #FFFFFF;
+  background-color: var(--brand-color);
+  border-color: var(--brand-color);
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  background-color: var(--primary-brand-color);
+  color: var(--white-color);
 }
