--- a/css/styles.css
+++ b/css/styles.css
@@ -694,6 +694,79 @@ body {
 
 /**
   |============================
+  | subscribe
+  |============================
+*/
+.subscribe {
+  margin-left: 80px;
+}
+
+.subscribe-title {
+    font-weight: 500;
+    margin-bottom: 24px;
+    color: rgba(255, 255, 255, 1);
+    
+    
+}
+
+.form-subscribe {
+    display: flex;
+    gap: 24px;
+}
+
+.subscribe-input {
+    width: 264px;
+    height: 40px;
+    padding: 8px 16px;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    color: var(--white-color)
+    
+    
+    
+}
+
+.subscribe-input::placeholder{
+    padding: 8px 16px;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.btn-subscribe{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: inherit;
+    padding: 8px 24px;
+    gap: 16px;
+    
+    color: #FFFFFF;
+    background-color: var(--brand-color);
+    border-color: var(--brand-color);
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    background-color: var(--primary-brand-color);
+    color: var(--white-color)
+    
+  
+}
+
+.btn-subscribe:hover,
+.btn-subscribe:focus {
+  background-color: var(--pressed-state);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sub-icon {
+  fill: var(--white-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+/**
+  |============================
   | portfolio filter-link
   |============================
 */
@@ -722,6 +795,7 @@ body {
 img {
   display: block;
   max-width: 100%;
+  
 }
 
 .project {
@@ -760,27 +834,25 @@ img {
 
 .modal {
   position: absolute;
-    top: 50%;
-    left: 50%;
-    padding-top: 72px;
-    padding-right: 24px;
-    padding-left: 24px;
-    padding-bottom: 24px;
-    border-radius: 4px;
-    background-color: #FCFCFD;
-    box-shadow: 0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%), 0px 2px 1px rgb(0 0 0 / 20%);
-    transition: transform 250ms var(--timing-function);
-    transform: translate(-50%, -50%) scale(1);
+  top: 50%;
+  left: 50%;
+  padding-top: 72px;
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-bottom: 24px;
+  border-radius: 4px;
+  background-color: #FCFCFD;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms var(--timing-function);
+  transform: translate(-50%, -50%) scale(1);
 }
+.close-btn {
+  display: flex;
+  justify-content: end;
+  padding-bottom: 72px 24px 24px;
 
-.modal-title {
-  margin-bottom: 16px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  text-align: center;
 }
-
 .modal-close-btn {
   position: absolute;
   top: 24px;
@@ -792,12 +864,12 @@ img {
   width: 24px;
   height: 24px;
   padding: 0;
-  cursor: pointer;
   border: 1px solid rgba(0, 0, 0, 0.1);
 
   border-radius: 24px;
   border-color: #000000 10%;
   background-color: #E7E9FC;
+  cursor: pointer;
 
  
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -812,12 +884,28 @@ img {
 }
 
 .modal-close-icon {
-  transition: fill currentcolor;
+  transition: fill currentcolor background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),;
 }
 
 .modal-close-btn:hover .modal-close-icon,
 .modal-close-btn:focus .modal-close-icon {
   fill: var(--white-color)
+}
+
+/**
+  |============================
+  | modal-form
+  |============================
+*/
+
+.modal-title {
+
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  
 }
 
 
@@ -826,35 +914,36 @@ img {
   flex-direction: column;
 }
 
-.modal-form-field {
-display:block;
-margin-bottom: 16px;
-font-size: 12px;
-line-height: calc(12 / 10);
-}
-
-.modal-form-field-desc {
-  display: block;
+.modal-form-input-desc {
+  display:block ;
   font-size: 12px;
+  font-weight: 400px;
   user-select: none;
   line-height: 1.33;
-  ;
-  color: var(--customers-color);
-}
-
-.modal-form-field-wrapper{
-  position: relative;
-  display: block;
+  margin-bottom: 4px;
+  color: #8E8F99;
 }
 
 .modal-form-input {
   width: 100%;
   height: 40px;
-  border: 1px solid #8E8F99 ;
-  border-radius: 4px;
+  border: 1px solid #8E8F99;
+  border-radius: 4px ;
   padding-left: 42px;
   outline: transparent;
+
+
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  
+  border-color: var(--customers-color-active)
+}
+
+.modal-form-input-wrapper {
+position: relative;
+display: block;
 }
 
 .modal-form-input-icon {
@@ -863,59 +952,78 @@ line-height: calc(12 / 10);
   left: 12px;
   transform: translateY(-50%);
   display: block;
+
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-field-massage {
+.modal-form-btn {
+  
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.modal-form-field {
+  display: block;
+  margin-bottom: 8px;
+ 
+}
+
+.modal-form-input:focus + .modal-form-input-icon {
+  fill: var(--customers-color-active);
+}
+
+.modal-form-massage {
   width: 100%;
   height: 100px;
   padding: 10px 16px;
   resize: none;
   outline: transparent;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 
-.modal-form-input:focus + .modal-form-input-icon{
-  fill: var(--customers-color-active);
+.modal-form-massage::placeholder {
+  letter-spacing: 0.04em;
+  color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-form-input:focus {
-  border-color: var(--customers-color-active);
+.modal-form-massage:focus {
+  border-color: var(--customers-color-active)
 }
-
-.modal-form-field-massage:focus {
-  border-color: var(--customers-color-active);
-  border-radius: 2px;
-} 
 
 .modal-form-check-desc {
-  display: inline-flex;
   font-size: 12px;
   font-weight: 400;
   letter-spacing: 0.04em;
   color: #757575;
   margin-bottom: 20px;
+  display: inline-flex;
+
 }
 
 .link-policy {
   color: #4d5ae5;
 }
 
-.checkbox-topic input[type='checkbox'] {
+.ckeckbox-topic input[type='checkbox'] {
   appearance: none;
+  -webkit-appearence: none;
+  -moz-appearence: none;
 }
 
 .checkbox-icon {
-  background-image: url(/images/checkbox/Default.png);
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  margin-right: 8px;
+background-image: url(../images/checkbox/unclick.svg);
+width: 16px;
+height: 16px;
+display: inline-block;
+margin-right: 8px;
 }
 
-.modal-form-check:checked+ .checkbox-icon {
-  background-image: url(/images/checkbox/click.png);
+
+.modal-form-check:checked + .checkbox-icon {
+  background-image: url(../images/checkbox/click.svg);
 }
+
 
 .modal-form-btn {
   color: #E7E9FC;
@@ -935,54 +1043,8 @@ line-height: calc(12 / 10);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
 
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
-
 .modal-form-btn:hover,
 .modal-form-btn:focus {
   background-color: var(--pressed-state);
-}
-
-.subscribe {
-  margin-left: 80px;
-}
-
-.subscribe-title {
-  margin-bottom: 24px;
-  font-weight: 500;
-  color: var(--white-color);
-}
-
-.form-subscribe {
-  gap: 24px;
-  display: flex;
-}
-
-.subscribe-input {
-  width: 264px;
-  height: 40px;
-  padding: 8px 16px;
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  color: var(--white-color);
-}
-
-.btn-subscribe {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: inherit;
-  padding: 8px 24px;
-  gap: 16px;
-  color: #FFFFFF;
-  background-color: var(--brand-color);
-  border-color: var(--brand-color);
-  border-radius: 4px;
-  cursor: pointer;
-  border: none;
-  background-color: var(--primary-brand-color);
-  color: var(--white-color);
 }
